<resources>
    <string name="app_name">SignMate-C241-PS262</string>
    <string name="signmate">SignMate\n</string>
    <string name="time_to_quiz">Time To\nQuiz &amp; Practice!</string>
    <string name="alphabet">Alphabets</string>
    <string name="number">Numbers</string>
    <string name="yes_no">Yes or No</string>
    <string name="alphabet_desc">This is an multiple\nchoice quiz to define\nan alphabet sign\nanswer</string>
    <string name="number_desc">This is an multiple\nchoice quiz to define\nan number sign\nanswer</string>
    <string name="yes_no_desc">This is an True or\nFalse condition, the\nplayer need to\nanswer correctly</string>
    <string name="quiz_alphabet">What letter does the sign\nlanguage picture refer\nto?</string>
    <string name="quiz_number">What number does the sign\nlanguage picture refer\nto?</string>
    <string name="quiz_yes_no">Is this Z?</string>
    <string name="play_now">Play Now</string>
    <string name="welcome">Hi %1$s!</string>
    <string name="welcome_guest">Hi Guest!</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="app_title">SignMate</string>
    <string name="menu">Menu</string>
    <string name="menu_1">Sign Language Dictionary</string>
    <string name="menu_2">Hand Recognition</string>
    <string name="menu_3">Quiz Practice</string>
    <string name="our_feature">Our Feature</string>
    <string name="dashboard">Dashboard</string>
    <string name="scan">Scan</string>
    <string name="quiz">Quiz</string>
    <string name="title_activity_navigation_fragment">NavigationFragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="copyright">2024 | C241-PS262™. All Rights Reserved</string>
    <string name="app_title_capitalize">SIGNMNATE</string>
    <string name="about_desc">We aimed at improving\ncommunication\naccessibility for individuals\nwith hearing impairments.</string>
    <string name="about_1">Realtime sign recognition</string>
    <string name="about_2">Cross-cultural understanding</string>
    <string name="about_3">Attractive quiz</string>
    <string name="full_name">Full Name</string>
    <string name="email">user123@gmail.com</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="birth_hint">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="dictionary">Dictionary</string>
    <string name="opening_desc">Join me in discovering the beauty of sign\nlanguage. Together!</string>
    <string name="explore">Explore the app</string>
    <string name="userchoice">You can choose with account, or guest</string>
    <string name="google">Continue with Google</string>
    <string name="guest">Guest Account</string>
    <string name="keep_doing_practice_and_good_luck">Keep doing practice and good luck!</string>
    <string name="you_have_8_10_correct_answers">You have 8/10 correct answers.</string>
    <string name="awesome">Awesome!</string>
    <string name="exit_the_quiz">exit the quiz</string>
    <string name="default_web_client_id">215899096912-7n5ki28qk6ans3sqgu6vtqvu3th8pbi9.apps.googleusercontent.com</string>
    <string name="please_wait">Please Wait...</string>
    <string name="save_profile">Save Profile</string>
</resources>