<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:backgroundTint="@color/white_tint"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_quizAndPractice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_to_quiz"
        android:fontFamily="@font/font_inter"
        android:layout_marginTop="85dp"
        android:layout_marginStart="24dp"
        android:textSize="35sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_alphabet"
            android:layout_width="176dp"
            android:layout_height="176dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/ic_yes_no"/>

        <TextView
            android:id="@+id/tv_quizTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_no"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/blue_dark"
            android:fontFamily="@font/font_poppinsbold"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/tv_quizDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_no_desc"
            android:textSize="22sp"
            android:textColor="@color/blue_dark"
            android:fontFamily="@font/font_poppins"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_playNow"
            android:layout_width="276dp"
            android:layout_height="44dp"
            android:text="@string/play_now"
            android:background="@drawable/custom_rounded_button"
            android:textColor="@color/white"/>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>


