<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_page"
    android:padding="20dp"
    tools:context=".ui.quiz.QuizAlphabetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Header Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title"
                    android:fontFamily="@font/font_poppinsbold"
                    android:textSize="24sp"
                    android:textColor="@color/blue"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_star" />
            </LinearLayout>
        </LinearLayout>

        <!-- Title TextView -->
        <TextView
            android:id="@+id/tv_quizAndPractice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_to_quiz"
            android:fontFamily="@font/font_inter"
            android:layout_marginStart="24dp"
            android:textSize="35sp"/>

        <!-- Main Content Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_alphabet"
                android:layout_width="176dp"
                android:layout_height="176dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_alphabet"/>

            <TextView
                android:id="@+id/tv_quizTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alphabet"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/blue_dark"
                android:fontFamily="@font/font_poppinsbold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_quizDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alphabet_desc"
                android:textSize="22sp"
                android:textColor="@color/blue_dark"
                android:fontFamily="@font/font_poppins"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_playNow"
                android:layout_width="276dp"
                android:layout_height="44dp"
                android:text="@string/play_now"
                android:background="@drawable/custom_buttom_playnow"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
