<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_page"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.login.LoginActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="66dp"
        android:layout_height="70dp"
        android:src="@drawable/layer_drawable"
        android:layout_gravity="left"
        android:background="@android:color/transparent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"/>


    <ImageView
        android:id="@+id/iv_appLogo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-55dp"
        android:src="@drawable/logo"/>

    <!-- Title -->
    <TextView
        android:id="@+id/tv_exploreapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_poppinssemi"
        android:layout_marginTop="-40dp"
        android:text="@string/explore"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/tv_userchoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_inter"
        android:text="@string/userchoice"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_backgroundbawah"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="90dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/font_inter"
            android:text="@string/google"
            android:gravity="fill"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:icon="@drawable/ic_google"
            app:iconSize="30dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/btn_guest"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/guest"
            android:fontFamily="@font/font_inter"
            android:gravity="fill"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:icon="@drawable/ic_guest"
            app:iconSize="30dp"
            app:iconTint="@color/black" />
    </LinearLayout>

</LinearLayout>
